SERVER-61106 Use woCompare to generate timeseries summaries